# enc

./: CONTRIBUTING.md  Cargo.toml  ISSUES.md  README.md
.github/workflows/: build.yml  build_check.yml  check.yml  pull_request.yml
src/: decoder.rs  encoder.rs  error.rs  lib.rs  stream_error.rs  string_encoder.rs
src/base64/: base64_decoder.rs  base64_encoder.rs  base64_validator.rs  decode_block.rs  decode_block_last.rs  decode_block_last_1.rs  decode_block_last_2.rs  decode_block_last_3.rs  decoded_len.rs  decoded_len_last_block.rs  decoding_table.rs  mod.rs  remove_padding_last_block.rs  split_last_block.rs
src/base_64/: base64_encoder.rs  base_64_decoder.rs  base_64_encoder.rs  base_64_validator.rs  decode_block.rs  decode_block_last.rs  decode_block_last_1.rs  decode_block_last_2.rs  decode_block_last_3.rs  decoded_len.rs  decoded_len_last_block.rs  mod.rs  remove_padding_last_block.rs  split_last_block.rs
src/data/: decoder.rs  encoder.rs  mod.rs  string_encoder.rs  util.rs  validator.rs
src/data/base_64/: base_64_decoder.rs  base_64_encoder.rs  base_64_validator.rs  constants.rs  mod.rs
src/data/hex/: hex_decoder.rs  hex_encoder.rs  hex_validator.rs  mod.rs
src/data/percent/: mod.rs  percent_decoder.rs  percent_encoder.rs  percent_validator.rs  special_set.rs
src/error/: error.rs  stream_error.rs
src/hex/: hex_decoder.rs  hex_decoder_tests.rs  hex_encoder.rs  hex_encoder_tests.rs  hex_validator.rs  hex_validator_tests.rs  mod.rs
src/percent/: mod.rs  percent_decoder.rs  percent_decoder_tests.rs  percent_encoder.rs  percent_encoder_tests.rs  percent_validator.rs  percent_validator_tests.rs  special_set.rs  special_set_tests.rs
src/read/: mod.rs  read_exact.rs  read_limit.rs
src/test/: decode_from_read.rs  decode_from_read_prefix.rs  encode_to_slice.rs  encode_to_write.rs  encoded_len.rs  hex.rs  io.rs  mod.rs  util.rs
src/test/data/: mod.rs  test_decoder.rs  (+3 more)
src/util/: exact_read.rs  impl_decode_from_read_by_decode_from_read_prefix.rs  impl_decode_from_read_by_prefix.rs  impl_encode_to_write_stack_buf.rs  mod.rs  read.rs  read_exact.rs  write_buffered_impl.rs
src/value/: decode_from_read.rs  decode_from_read_length_prefixed.rs  decode_from_read_prefix.rs  encode_to_slice.rs  encode_to_write.rs  encode_to_write_length_prefixed.rs  encoded_len.rs  mod.rs  util.rs
src/var_int/: mod.rs  var_int_128.rs  var_int_32.rs  var_int_64.rs  var_int_size.rs
(+42 files in other folders)
